--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" lang="en">
   <head>
-    <!-- By Christopher Briddock http://behance.net/Chris-B-->
-    <title>Serenity - A Portfolio Template</title>
+    <title>Nithin Rao</title>
     <meta charset="UTF-8">
-    <!-- Facebook meta tags-->
-    <meta property="og:title" content="Serenity - A Portfolio Template">
-    <meta property="og:image" content="">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Serenity - A Portfolio Template">
     <!-- Responsive meta tag-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="IE=Edge">
