--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-compatible" content="IE=Edge">
     <meta name="robots" content="index, follow">
     <!-- Description and keywords for search engines-->
-    <meta name="description" content="This is a portfolio template, coded in HTML 5 and CSS 3!">
+    <meta name="description" content="This is my website, coded in HTML 5 and CSS 3!">
     <meta name="keywords" content="Portfolio Template HTML5 CSS3 Javascript Custom">
     <meta name="msapplication-TileColor" content="#cdcec0">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
@@ -68,8 +68,8 @@
             <li><a href="#" class="contact-nav">CONTACT</a></li>
           </ul>
         </nav>
-        <h1 id="jumbotron">Lorem ipsum dolor sit amet</h1>
-        <h2 id="supporting-header">Lorem ipsum dolor sit amet</h2><a href="#" class="btn">Lorem ipsum</a>
+        <h1 id="jumbotron">Hello</h1>
+        <h2 id="supporting-header">Welcome to my site</h2><a href="#" class="btn">Learn more</a>
       </div>
     </header>
     <section>
@@ -77,14 +77,12 @@
         <h1 class="port">About Me</h1>
         <div class="self-pic"></div>
         <!-- Change paragraph text here, add subheadings by using h2 or h3 tags -->
-        <p class="about-para">Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor <strong>accumsan tincidunt</strong>. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus.</p>
-        <p class="about-para">Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus.</p>
-        <p class="about-para">Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Praesent sapien massa, <strong>convallis</strong> a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus.</p>
-      </div>
+        <p class="about-para">Small description about me</p>
+        </div>
     </section>
     <section>
       <!-- edit the H2 text if you need to-->
-      <h2 class="port">My Portfolio</h2>
+      <h2 class="port">My Projects</h2>
       <div class="container">
         <div class="flex">
           <!-- change the links of the images and project title here!-->
@@ -100,12 +98,6 @@
           <figure id="four">
             <figcaption id="img4" class="overlay">Project Title Goes Here!</figcaption><a href="http://externallinkgoeshere.co.uk" target="_blank"><img src="/img/photo-4.png" alt=""></a>
           </figure>
-          <figure id="five">
-            <figcaption id="img5" class="overlay">Project Title Goes Here!</figcaption><a href="http://externallinkgoeshere.co.uk" target="_blank"><img src="/img/photo-5.png" alt=""></a>
-          </figure>
-          <figure id="six">
-            <figcaption id="img6" class="overlay">Project Title Goes Here!</figcaption><a href="http://externallinkgoeshere.co.uk" target="_blank"><img src="/img/photo-6.png" alt=""></a>
-          </figure>
         </div>
       </div>
     </section>
@@ -113,15 +105,15 @@
       <div class="container">
         <!-- edit this h2 and paragraph text here!-->
         <h2 class="contact">Contact Me!</h2>
-        <p class="contact">Whether it's a question or you want to talk about your latest project, feel free to reach out to me!</p><a href="mailto:example@example.com" class="contact-button">Email Me!</a>
+        <p class="contact">Whether it's a question or you want to talk about your latest project, feel free to reach out to me!</p><a href="mailto:nithinrao.koluguri@gmail.com" class="contact-button">Email Me!</a>
         <div class="flex">
-          <div class="social-media"><a href="#">Twitter</a><a href="#">Behance</a><a href="#">Dribbble</a><a href="#">Instagram</a></div>
+          <div class="social-media"><a href="twitter.com/nithinraok_">Twitter</a></div>
         </div>
       </div>
     </section>
     <footer>
       <div class="container">
-        <p class="foot">&copy; Chris Briddock 2015</p>
+        <p class="foot">&copy; Nithin Rao K</p>
       </div>
     </footer>
     <script src="/js/main.js"></script>
