--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="close"></div>
       </div>
       <div class="container">
-        <div id="logo">SERENITY</div>
+        <div id="logo">Nithin</div>
         <nav><a id="toggle" href="#"><i class="fa fa-bars fa-2x"></i></a>
           <ul class="in">
             <li><a href="/">HOME</a></li>
