Removed android chrome images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="description" content="This is my website, coded in HTML 5 and CSS 3!">
     <meta name="keywords" content="Portfolio Template HTML5 CSS3 Javascript Custom">
     <meta name="msapplication-TileColor" content="#cdcec0">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Style sheets-->
     <link rel="stylesheet" href="css/all.css">
@@ -40,7 +39,7 @@
         <div class="close"></div>
       </div>
       <div class="container">
-        <div id="logo">Nithin</div>
+        <div id="logo"></div>
         <nav><a id="toggle" href="#"><i class="fa fa-bars fa-2x"></i></a>
           <ul class="in">
             <li><a href="/">HOME</a></li>
