Squahed Minor Space Errors

--- a/industry.html
+++ b/industry.html
@@ -24,15 +24,14 @@
 <p>We Developed an UnSupervised System for robust bird sound detection using enhanced Multiple Window
 Savitzky-Golay (MWSG) spectrogram.Proposed method, on average, achieved higher F-score (10.24% relative) compared to the best of the baseline schemes. </p>
 <h2>Winter Research Intern in <a href="http://spire.ee.iisc.ac.in/">Spire Lab IISc </a> mentored by <a href="http://www.ee.iisc.ac.in/new/people/faculty/prasantg/"> Prof. Prasanta Kumar Ghosh </a>(Dec 2015 - Dec 2015)</h2>
-<p>Worked on a project, \Converting whispered speech to normal speech using CELP Codec" to include Pitch for the whispered signal as it lacks Pitch & Synthesize speech to produce normal human speech like signal
+<p>Worked on a project, Converting whispered speech to normal speech using CELP Codec" to include Pitch for the whispered signal as it lacks Pitch & Synthesize speech to produce normal human speech like signal
 from Whispered Speech and designed an Android Application for the same</p>
 <h2>Summer Research Intern in <a href="http://www.iitbbs.ac.in/laboratories.php?code=es/">Signal Processing Lab</a> mentored by <a href="http://www.iitbbs.ac.in/profile.php/gpanda/"> Prof. Ganapati Panda </a>(May 2014 - June 2014)</h2>
 <p>Developed algorithms to recognize Oriya Numerals using Radial Basis Function Neural Network whose
 features are extracted from Curvelet Transformed numeral which is further processed for dimensionality
 reduction using Principal component analysis (PCA) achieved an 97.92% accuracy. </p>
-<h2>VLSI Design Contest in<a href="https://www.synopsys.com/">Synopsys, Hyderabad (July 2015)</a></h2>
-<p>Participated in Synopsys Design Contest Program, where we were trained on Synopsys EDA Custom De-
-signer Tool and Implemented \Basic Latched Comparator" </p>
+<h2>VLSI Design Contest in<a href="https://www.synopsys.com/"> Synopsys, Hyderabad (July 2015)</a></h2>
+<p>Participated in Synopsys Design Contest Program, where we were trained on Synopsys EDA Custom Designer Tool and Implemented \Basic Latched Comparator" </p>
 
 <div id="footer">
 </div>
