--- a/links.html
+++ b/links.html
@@ -21,9 +21,9 @@
 <h1>Links </h1>
 </div>
 <p><a href="https://www.linkedin.com/in/nithinraok/">LinkedIn</a><br /></p>
-<p><a href="https://www.twitter.com/nithinraok_">Twitter><br /></p>
-<p><a href="https://www.fb.com/nithinyuvi">Facebook><br /></p>
-<p><a href="https://www.instagram.com/nithinraok_/">Instagram><br /></p>
+<p><a href="https://www.twitter.com/nithinraok_">Twitter<br /></p>
+<p><a href="https://www.fb.com/nithinyuvi">Facebook<br /></p>
+<p><a href="https://www.instagram.com/nithinraok_/">Instagram<br /></p>
 <div id="footer">
 </div>
 </td>
