--- a/industry.html
+++ b/industry.html
@@ -14,6 +14,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="industry.html" class="current">Internships</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
 </td>
 <td id="layout-content">
@@ -26,12 +27,12 @@ Savitzky-Golay (MWSG) spectrogram.Proposed method, on average, achieved higher F
 <h2>Winter Research Intern in <a href="http://spire.ee.iisc.ac.in/">Spire Lab IISc </a> mentored by <a href="http://www.ee.iisc.ac.in/new/people/faculty/prasantg/"> Prof. Prasanta Kumar Ghosh </a>(Dec 2015 - Dec 2015)</h2>
 <p>Worked on a project, Converting whispered speech to normal speech using CELP Codec" to include Pitch for the whispered signal as it lacks Pitch & Synthesize speech to produce normal human speech like signal
 from Whispered Speech and designed an Android Application for the same</p>
-<h2>Summer Research Intern in <a href="http://www.iitbbs.ac.in/laboratories.php?code=es/">Signal Processing Lab</a> mentored by <a href="http://www.iitbbs.ac.in/profile.php/gpanda/"> Prof. Ganapati Panda </a>(May 2014 - June 2014)</h2>
+<h2>Summer Research Intern in <a href="http://www.iitbbs.ac.in/laboratories.php?code=es/">Signal Processing Lab in IIT Bhubaneshwar</a> mentored by <a href="http://www.iitbbs.ac.in/profile.php/gpanda/"> Prof. Ganapati Panda </a>(May 2014 - June 2014)</h2>
 <p>Developed algorithms to recognize Oriya Numerals using Radial Basis Function Neural Network whose
 features are extracted from Curvelet Transformed numeral which is further processed for dimensionality
 reduction using Principal component analysis (PCA) achieved an 97.92% accuracy. </p>
 <h2>VLSI Design Contest in<a href="https://www.synopsys.com/"> Synopsys, Hyderabad (July 2015)</a></h2>
-<p>Participated in Synopsys Design Contest Program, where we were trained on Synopsys EDA Custom Designer Tool and Implemented \Basic Latched Comparator" </p>
+<p>Participated in Synopsys Design Contest Program, where we were trained on Synopsys EDA Custom Designer Tool and Implemented Basic Latched Comparator" </p>
 
 <div id="footer">
 </div>
