--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="industry.html">Internships</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
 </td>
 <td id="layout-content">
