--- a/links.html
+++ b/links.html
@@ -14,17 +14,17 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="industry.html">Internships</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html" class="current">Links</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Links </h1>
 </div>
+<p><a href="mailto:nithinrao.koluguri@gmail.com">Email Me</a><br /></p>
 <p><a href="https://www.github.com/nithinraok">GitHub</a><br /></p>
 <p><a href="https://www.linkedin.com/in/nithinraok/">LinkedIn</a><br /></p>
 <p><a href="https://www.twitter.com/nithinraok_">Twitter<br /></p>
-<p><a href="https://www.fb.com/nithinyuvi">Facebook<br /></p>
-<p><a href="https://www.instagram.com/nithinraok_/">Instagram<br /></p>
 <div id="footer">
 </div>
 </td>
