--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,9 @@
 <div id="toptitle">
 <h1>My Projects </h1>
 </div>
-<h2>Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection <a href="https://github.com/nithinraok/MWSG_IEEE_Paper">Link</a> </h2>
+<h2><a href="https://github.com/nithinraok/MWSG_IEEE_Paper">Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection </a> </h2>
 <p>We Developed an UnSupervised System for robust bird sound detection using enhanced Multiple Window Savitzky-Golay (MWSG) spectrogram.Proposed method, on average, achieved higher F-score (10.24% relative) compared to the best of the baseline schemes. </p>
-<h2>Decision level data fusion of Image and Speech recognition system <a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">Link</a> </h2>
+<h2><a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">Decision level data fusion of Image and Speech recognition system </a> </h2>
 <p>Detecting an object in an area based on the command given through speech using MFCC and HMM for Speech & HOG and SVM for Image as Features and classifier respectively</p>
 
 <div id="footer">
