--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,10 @@
 <p>We Developed an UnSupervised System for robust bird sound detection using enhanced Multiple Window Savitzky-Golay (MWSG) spectrogram.Proposed method, on average, achieved higher F-score (10.24% relative) compared to the best of the baseline schemes. </p>
 <h2><a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">Decision level data fusion of Image and Speech recognition system </a> </h2>
 <p>Detecting an object in an area based on the command given through speech using MFCC and HMM for Speech & HOG and SVM for Image as Features and classifier respectively</p>
+<h2><a href="https://www.openprocessing.org/sketch/393160">Burst The Bubble Game</a> </h2>
+<p>Burst as many bubbles as you can by clicking on them in 20 sec. Mouse is more convenient than Track Pad as there can be more room to travel</p>
+<h2><a href="https://www.openprocessing.org/sketch/392757">Catch the ball game</a> </h2>
+<p>Catch a red ball which is randomly placed at a point with another ball which moves in a direction opposite to mouse moving direction. Score as many as you can in 60 sec. Final Score will pop once the time ends.</p>
 
 <div id="footer">
 </div>
