Added bosch website link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <td align="left"><p><b>Project Assistant,</b> <br />
 <b><a href = "https://spire.ee.iisc.ac.in/">SPIRE LAB </a>, Indian Institute of Science Bangalore </b> <br /> </p>
 <p>Previous Affiliations:<br />
-(2016-2018) Software Developer, <br /> 
-<a href = "https://www.bosch-india-software.com/" > Robert Bosch </a>,Bangalore <br /></p>
+(2016-2018) Software Developer, <br />
+<a href = "http://www.bosch-india-software.com/en/homepage/rbei_homepage.html" > Robert Bosch </a>,Bangalore <br /></p>
 (2012-2016) B. Tech. in Electronics and Communication Engineering<br />
 <a href="http://www.nitk.ac.in/">National Institute of Technology,Surathkal</a>, India</p>
 </td></tr></table>
