--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,8 @@
 <p>Burst as many bubbles as you can by clicking on them in 20 sec. Mouse is more convenient than Track Pad as there can be more room to travel</p>
 <h2><a href="https://www.openprocessing.org/sketch/392757">Catch the ball game</a> </h2>
 <p>Catch a red ball which is randomly placed at a point with another ball which moves in a direction opposite to mouse moving direction. Score as many as you can in 60 sec. Final Score will pop once the time ends.</p>
-<h2><a href="jumpGame">jumpGame_Link</a> </h2>
-<p>Jump Game</p>
+<h2><a href="jumpGame">Mario mimic game</a> </h2>
+<p>Based on the pitch of the speaker mario jumps up or down </p>
 
 <div id="footer">
 </div>
