Added MS in USC

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="profile_Image.JPG" alt="331px" width="262px" />&nbsp;</td>
-<td align="left"><p><b>Project Assistant,</b> <br />
-<b><a href = "https://spire.ee.iisc.ac.in/">SPIRE LAB </a>, Indian Institute of Science Bangalore </b> <br /> </p>
-<p>Previous Affiliations:<br />
-(2016-2018) Software Developer, <br />
-<a href = "http://www.bosch-india-software.com/en/homepage/rbei_homepage.html" > Robert Bosch </a>,Bangalore <br /></p>
+<td align="left"><p><b>Graduate Student (MS in Speech and Image Processing) </b> <br />
+<a href = "https://minghsiehee.usc.edu/">Elctrical Engineering </a>, University of Southern California, Los Angeles, CA <br /> </p><br />
+<p><b>Previous Affiliations:</b>
+<br />
+(2018 Jan - July) Research Assistant,<a href = "https://spire.ee.iisc.ac.in/">SPIRE LAB </a>, Indian Institute of Science Bangalore,India <br /> </p>
+(2016-2018) Software Developer,
+<a href = "http://www.bosch-india-software.com/en/homepage/rbei_homepage.html" > Robert Bosch </a>,Bangalore, India <br /></p>
 (2012-2016) B. Tech. in Electronics and Communication Engineering<br />
 <a href="http://www.nitk.ac.in/">National Institute of Technology,Surathkal</a>, India</p>
 </td></tr></table>
