--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <table class="imgtable"><tr><td>
 <img src="profile_Image.JPG" alt="331px" width="262px" />&nbsp;</td>
 <td align="left"><p><b>Graduate Student (MS in Speech and Image Processing) </b> <br />
-<a href = "https://minghsiehee.usc.edu/">Elctrical Engineering </a>, University of Southern California, Los Angeles, CA <br /> </p><br />
+<a href = "https://minghsiehee.usc.edu/">Electrical Engineering </a>, University of Southern California, Los Angeles, CA <br /> </p><br />
 <p><b>Previous Affiliations:</b>
 <br />
 (2018 Jan - July) Research Assistant,<a href = "https://spire.ee.iisc.ac.in/">SPIRE LAB </a>, Indian Institute of Science Bangalore,India <br /> </p>
