--- a/projects.html
+++ b/projects.html
@@ -31,16 +31,18 @@
 <div id="toptitle">
 <h1>My Projects </h1>
 </div>
-<h2><a href="https://github.com/nithinraok/MWSG_IEEE_Paper">Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection </a> </h2>
-<p>We Developed an UnSupervised System for robust bird sound detection using enhanced Multiple Window Savitzky-Golay (MWSG) spectrogram.Proposed method, on average, achieved higher F-score (10.24% relative) compared to the best of the baseline schemes. </p>
-<h2><a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">Decision level data fusion of Image and Speech recognition system </a> </h2>
-<p>Detecting an object in an area based on the command given through speech using MFCC and HMM for Speech & HOG and SVM for Image as Features and classifier respectively</p>
+<h2><a href="https://github.com/nithinraok/MWSG_IEEE_Paper">Bird sound detection using MWSG spectrogram</a> </h2>
+<p>The project is based on an idea to detect bird sounds in real field recordings. We proposed an unsupervised algorithm to enhance spectrogram which is generated using multiple window method. Later after filtering the spectrogram using Savitzky-Golay filter we captured bird specific sound cues using directional filters.</p>
+<h2><a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">Image recognition system based on speech command</a> </h2>
+<p>Designed an image recognition system based on the input given through speech. The goal of the project is to assist visual-impaired persons to know the coordinates of the object they are looking for just by their speech. The system on overall achieved an accuracy of 93.75%</p>
+<h2><a href="https://github.com/nithinraok/MyAlgorithms/blob/master/DataStructures/ICASSP_ALS_04_11_18.pdf">ALS and Parkinsons diseases detection using voice as bio-marker</a> </h2>
+<p>Built a speech classifier to detect Amyotrophic Lateral Sclerosis (ALS) & Parkinsons (PD) diseases based on voice as bio-marker and compared the disease detection across various devices. The best classification accuracy of 92.2% has been received on Zoom_H6 microphone recorded test data.</p>
 <h2><a href="https://www.openprocessing.org/sketch/393160">Burst The Bubble Game</a> </h2>
 <p>Burst as many bubbles as you can by clicking on them in 20 sec. Mouse is more convenient than Track Pad as there can be more room to travel</p>
 <h2><a href="https://www.openprocessing.org/sketch/392757">Catch the ball game</a> </h2>
 <p>Catch a red ball which is randomly placed at a point with another ball which moves in a direction opposite to mouse moving direction. Score as many as you can in 60 sec. Final Score will pop once the time ends.</p>
 <h2><a href="jumpGame">Mario mimic game</a> </h2>
-<p>Based on the pitch of the speaker mario jumps up or down </p>
+<p>Based on the pitch of the speaker mario jumps up or down (whole functionality coming soon)</p>
 
 <div id="footer">
 </div>
