--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,12 @@
 </div>
 <h2>2017 </h2>
 <ul>
-<li><p>Nithin Rao K, Nisha Meenakshi and Prasanta Kumar Ghosh. <a href="http://ieeexplore.ieee.org/document/7933047/?reload=true">"Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection"</a> IEEE/ACM Transactions on Audio, Speech, and Language Processing,May 2017.</p>
+<li><p> <b> Nithin Rao K </b>, Nisha Meenakshi and Prasanta Kumar Ghosh. <a href="http://ieeexplore.ieee.org/document/7933047/?reload=true">"Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection"</a> IEEE/ACM Transactions on Audio, Speech, and Language Processing,May 2017.</p>
+</li>
+</ul>
+<h2>2018 </h2>
+<ul>
+<li><p> <b> Nithin Rao K </b>, Deep Patel, Suhas and Prasanta Kumar Ghosh. <a href="https://github.com/nithinraok/MyAlgorithms/blob/master/DataStructures/ICASSP_ALS_04_11_18.pdf">"Comparison Of Speech Tasks And Recording Devices For Voice Based Automatic Classification Of Healthy Subjects And Patients With Amyotrophic Lateral Sclerosis"</a> Submitted to ICASSP.</p>
 </li>
 </ul>
 <div id="footer">
