Added Blogs section

--- a/industry.html
+++ b/industry.html
@@ -23,6 +23,7 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="blogs.html">Blogs</a></div>
 <div class="menu-item"><a href="industry.html" class="current">Internships</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
