--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="blogs.html">Blogs</a></div>
 <div class="menu-item"><a href="industry.html">Internships</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
