--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,7 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
+<div class="menu-item"><a href="blogs.html">Blogs</a></div>
 <div class="menu-item"><a href="industry.html">Internships</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
