Added Blogs section

--- a/blogs.html
+++ b/blogs.html
@@ -23,9 +23,9 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="blogs.html">Blogs</a></div>
+<div class="menu-item"><a href="blogs.html" class = "current" >Blogs</a></div>
 <div class="menu-item"><a href="industry.html">Internships</a></div>
-<div class="menu-item"><a href="projects.html" class = "current">Projects</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html">Links</a></div>
 </td>
 <td id="layout-content">
