--- a/links.html
+++ b/links.html
@@ -23,8 +23,8 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="industry.html">Internships</a></div>
 <div class="menu-item"><a href="blogs.html">Blogs</a></div>
+<div class="menu-item"><a href="industry.html">Internships</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="links.html" class="current">Links</a></div>
 </td>
@@ -37,6 +37,7 @@
 <p><a href="https://www.linkedin.com/in/nithinraok/">LinkedIn</a><br /></p>
 <p><a href="https://www.twitter.com/nithinraok_">Twitter<br /></p>
 <p><a href="https://drive.google.com/open?id=1YKT0RKQfm1XQHRzGyf_YJ87odoa_eyGd">Resume<br /></p>
+<p><a href="https://medium.com/@nithinraok_">Medium<br /></p>
 <div id="footer">
 </div>
 </td>
