Added VQA blog link

--- a/blogs.html
+++ b/blogs.html
@@ -35,6 +35,10 @@
 <h2><a href="https://medium.com/@nithinraok_/decoding-an-audio-file-using-a-pre-trained-model-with-kaldi-c1d7d2fe3dc5">Decoding an audio file using a pre-trained model with Kaldi</a> </h2>
 <p>In this Blog I explained how one can use pretrained model to do speech recognition using Kaldi.</p>
 
+<h2><a href="https://medium.com/@nithinraok_/visual-question-answering-attention-and-fusion-based-approaches-ebef62fa55aa">Visual Question Answering — Attention and Fusion based approaches</a> </h2>
+<p>In this Blog I explained how we approarched fusion and attention based models for designing a good Visual Question answering 
+  system</p>
+
 <div id="footer">
 </div>
 </td>
