Added Analytics snippet

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
   </style>
   <!-- <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
   <title> Nithin Rao</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114832734-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-114832734-1');
+</script>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
