--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
             <td width="67%" valign="middle">
               <p align="center">
                 <name>Nithin Rao Koluguri</name>
-              </p>
-              <p>I am a graduate student researcher in Electrical Engineering at USC, where I am advised by <a href="https://sail.usc.edu/people/shri.html">Prof. Shrikanth Narayanan</a>. I am a part of <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a>, and my research interests include speech signal processing, natural language processing and machine learning.
-              </p>
+              <!-- </p> -->
+              <!-- <p>I am a graduate student researcher in Electrical Engineering at USC, where I am advised by <a href="https://sail.usc.edu/people/shri.html">Prof. Shrikanth Narayanan</a>. I am a part of <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a>, and my research interests include speech signal processing, natural language processing and machine learning. -->
+              <!-- </p> -->
+	      <p>
+I am a graduate student researcher in Electrical Engineering at USC, where I am advised by <a href="https://viterbi.usc.edu/directory/faculty/Georgiou/Panayiotis">Prof. Panayiotis  Georgiou</a>. I am a part of <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a>, and my research interests include speech signal processing, natural language processing and machine learning.
+              
+	      </p>
               <p>
 	      I worked as a applied machine learning intern at  <a href="https://www.bose.com/en_us/index.html">Bose CE Applied Research group.</a> Prior to joining USC, I was a Research Assistant in <a href="https://spire.ee.iisc.ac.in/" > SPIRE LAB, IISc </a> where, I was guided by 
 	      <a href="http://www.ee.iisc.ac.in/new/people/faculty/prasantg/" >Prof. Prasanta.</a> I also worked as a Software Developer developing configuration features for ECU Embedded Devices at <a href="https://www.bosch.in/" > Robert Bosch Bangalore.</a>
