--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
             <td width="100%" valign="middle">
               <heading>Research</heading>
               <p>
-		I am interested in understanding signal level properties of audio,speech and Image. My research experiences thus far delve in applying machine learning algorithms on speech and natural language processing.
+		I am interested in understanding signal level properties of audio,speech and Image. My research experiences thus far delve in natural language processing and applying machine learning algorithms on speech & image.
 	      </p>
             </td>
           </tr>
