Added DR Project

--- a/index.html
+++ b/index.html
@@ -194,8 +194,24 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
           </tr>
         </table>
         <table width="100%" align="center" border="0" cellpadding="20">
+
           <tr>
-            <td width="25%"><img src="images/VQA.png" width="160" height="160"></td>
+            <td width="25%"><img src="images/sausage.jpg" width="200" height="160"></td>
+            <td width="75%" valign="top">
+              <p>
+                <a href="">
+                  <papertitle>Generating sausages from text using WFSTs without acoustic model (DR Project)</papertitle>
+                </a>
+                <br> Developed a method to mimic an ASR for a given Noise type at certain db level to generate nbest paths from text alone using sausages and confusion matrix. Generated text can be used swiftly to improve an ASR correction model.
+		<strong>Nithin Rao Koluguri</strong>, <a href="">Prashanth G</a>,<a href="https://viterbi.usc.edu/directory/faculty/Georgiou/Panayiotis">Prof. Panayiotis Georgiou,</a>  2019 
+                <p>
+                  <br>  
+                </p>
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td width="25%"><img src="images/VQA.png" width="200" height="160"></td>
             <td width="75%" valign="top">
               <p>
                 <a href="https://medium.com/@nithinraok_/visual-question-answering-attention-and-fusion-based-approaches-ebef62fa55aa">
@@ -211,7 +227,7 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
           </tr>
 
 	  <tr>
-            <td width="25%"><img src="images/kaldi.png" width="160" height="160"></td>
+            <td width="25%"><img src="images/kaldi.png" width="200" height="160"></td>
             <td width="75%" valign="top">
               <p>
                 <a href="https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system">
@@ -236,7 +252,7 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
         </table>
         <table width="100%" align="center" border="0" cellpadding="20">
           <tr>
-            <td width="25%"><img src="images/Blog.png" width="160" height="160"></td>
+            <td width="25%"><img src="images/Blog.png" width="200" height="160"></td>
             <td width="75%" valign="top">
               <p>
                 <a href="https://medium.com/@nithinraok_/decoding-an-audio-file-using-a-pre-trained-model-with-kaldi-c1d7d2fe3dc5">
@@ -264,7 +280,7 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
           <tbody><tr><td>
           <br>
             <p align="right"><font size="2">
-            <a href="http://www.cs.berkeley.edu/~barron/">this guy makes a cool website</a>
+            <a href="http://www.cs.berkeley.edu/~barron/">inspired from this website</a>
             </font></p>
           </td></tr></tbody>
         </table>
