--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@ I am a graduate student researcher in Electrical Engineering at USC, where I am 
                 <a href="">
                   <papertitle>Generating sausages from text using WFSTs without acoustic model (DR Project)</papertitle>
                 </a>
-                <br> Developed a method to mimic an ASR for a given Noise type at certain db level to generate nbest paths from text alone using sausages and confusion matrix. Generated text can be used swiftly to improve an ASR correction model.
+
 		<strong>Nithin Rao Koluguri</strong>, <a href="">Prashanth G</a>,<a href="https://viterbi.usc.edu/directory/faculty/Georgiou/Panayiotis">Prof. Panayiotis Georgiou,</a>  2019 
+		<br>
+		<br> Developed a method to mimic an ASR for a given Noise type at certain db level to generate nbest paths from text alone using sausages and confusion matrix. Generated text can be used swiftly to improve an ASR correction model.<br>
                 <p>
                   <br>  
                 </p>
