small content change

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <br>
               <a href="http://spire.ee.iisc.ac.in/spire/allPublications.php">project page</a>
               <p></p>
-              <p>We understood role of different speech tasks and recording devices in detecting ALS through speech</p>
+              <p>We evaluated role of different speech tasks and recording devices in detecting ALS through speech</p>
             </td>
           </tr>
 
