--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                 <a href="mailto:koluguri@usc.edu">Email</a> &nbsp/&nbsp
                 <a href="https://drive.google.com/open?id=1YKT0RKQfm1XQHRzGyf_YJ87odoa_eyGd">CV</a> &nbsp/&nbsp
                 <a href="https://www.github.com/nithinraok">Github</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/nithinraok/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/nithinraok/"> LinkedIn </a> &nbsp/&nbsp
+                <a href="https://medium.com/@nithinraok_">Blog</a>
               </p>
             </td>
             <td width="33%">
