Updated link of interspeech paper

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <div class="one"><img src='images/ALS.png'></div>
             </td>
             <td valign="top" width="75%">
-              <a href="https://github.com/nithinraok/MyAlgorithms/blob/master/DataStructures/ICASSP_ALS_04_11_18.pdf">
+              <a href="https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1285.pdf">
                 <papertitle>Comparison Of Speech Tasks And Recording Devices For Voice Based Automatic Classification Of Healthy Subjects And Patients With Amyotrophic Lateral Sclerosis</papertitle>
               </a>
               <br>
