Added Google Scholar Profile

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <a href="https://drive.google.com/open?id=1YKT0RKQfm1XQHRzGyf_YJ87odoa_eyGd">CV</a> &nbsp/&nbsp
                 <a href="https://www.github.com/nithinraok">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/nithinraok/"> LinkedIn </a> &nbsp/&nbsp
+                <a href="https://scholar.google.co.in/citations?user=YPtcUTUAAAAJ&hl=en"> Google Scholar  </a> &nbsp/&nbsp
                 <a href="https://medium.com/@nithinraok_">Blog</a>
               </p>
             </td>
