--- a/index.html
+++ b/index.html
@@ -143,6 +143,29 @@
 
           <tr>
             <td width="25%">
+              <div class="one"><img src='images/proto_1.jpg'></div>
+            </td>
+            <td valign="top" width="75%">
+              <a href="https://arxiv.org/abs/1910.11400">
+                <papertitle>Meta-learning for robust child-adult classification from speech</papertitle>
+              </a>
+              <br>
+              <strong> Nithin Rao Koluguri</strong>,
+              <a href="https://sail.usc.edu/~prabakar/">Manoj Kumar</a>,
+              So Hyun Kim, Catherine Lord,
+              <a href="https://sail.usc.edu/people/shri.php">Shrikanth Narayanan</a>
+              <br>
+              <br>
+              <em>Submitted to ICASSP, 2020</em>
+              <br>
+              <a href="https://github.com/usc-sail/care-proto-child-adult">project page</a>
+              <p></p>
+              <p>We demonstrate improvements over state-of-the-art speaker embeddings (x-vectors) for speaker classification using prototypical networks</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td width="25%">
               <div class="one"><img src='images/ALS.png'></div>
             </td>
             <td valign="top" width="75%">
@@ -150,8 +173,8 @@
                 <papertitle>Comparison Of Speech Tasks And Recording Devices For Voice Based Automatic Classification Of Healthy Subjects And Patients With Amyotrophic Lateral Sclerosis</papertitle>
               </a>
               <br>
-              <a href="">Suhas B.N</a>*,
-              <a href="">Deep Patel</a>*,
+              Suhas B.N,
+              Deep Patel,
               <strong> Nithin Rao Koluguri</strong>,
               <a href="http://www.ee.iisc.ac.in/new/people/faculty/prasantg/">Prasanta Ghosh</a>*
               <br>
@@ -238,7 +261,7 @@
                   <papertitle>Image recognition system based on speech command</papertitle>
                 </a>
                 <br>
-		<strong>Nithin Rao Koluguri</strong>, <a href="">Nikhil</a>,<a href=""> Gaurav Newalkar,</a> 2016 
+		<strong>Nithin Rao Koluguri</strong>, Nikhil, Gaurav Newalkar, 2016 
                 <p>
                   <br> Designed an image recognition system based on the input given through speech. The goal of the project is to assist visual-impaired persons to know the coordinates of the object they are looking for just by their speech. The system on overall achieved an accuracy of 93.75% on speech digits
                 </p>
