--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p align="center">
                 <name> Nithin Rao Koluguri</name>
               </p>
-              <p> I am a Deep Learning Applied Scientist &#64; <a href="https://developer.nvidia.com/conversational-ai">  NVIDIA Conversational AI  </a>. I work on developing speaker recognition, verification and diarization systems. My research interests include speech signal processing, natural language processing and machine learning.</p> 
+              <p> As a Deep Learning Applied Scientist &#64; <a href="https://developer.nvidia.com/conversational-ai">  NVIDIA Conversational AI,</a> I work on developing speaker recognition, verification and diarization systems. My research interests include speech signal processing, natural language processing and machine learning.</p> 
               <p>
                 I received my masters degree from University of Southern California (USC) with a major in Electrical and Computer Engineering. During my masters I carried out research through <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a> where I was advised by <a href="https://sail.usc.edu/people/shri.html">Prof. Shrikanth Narayanan</a>.
 	      </p>
